add benchmarks api
