# docs/swagger.json
@@ -407,6 +407,122 @@
                 }
             }
         },
+        "/clouds/{cloudId}/clusters/{clusterId}/benchmarks": {
+            "get": {
+                "description": "클러스터 Benchmarks 결과 리스트 (Openstack)",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Openstack-Cluster-Benchmarks"
+                ],
+                "summary": "GetBenchmarksList",
+                "operationId": "GetBenchmarksList",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Cloud ID",
+                        "name": "cloudId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Cluster ID",
+                        "name": "clusterId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.ReturnData"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "클러스터에 CIS Benchmarks 실행 (Openstack)",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Openstack-Cluster-Benchmarks"
+                ],
+                "summary": "SetBenchmarks",
+                "operationId": "SetBenchmarks",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Cloud ID",
+                        "name": "cloudId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Cluster ID",
+                        "name": "clusterId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.ReturnData"
+                        }
+                    }
+                }
+            }
+        },
+        "/clouds/{cloudId}/clusters/{clusterId}/benchmarks/{benchmarksId}": {
+            "get": {
+                "description": "클러스터 Benchmarks 결과 상세 조회 (Openstack)",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Openstack-Cluster-Benchmarks"
+                ],
+                "summary": "GetBenchmarks",
+                "operationId": "GetBenchmarks",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Cloud ID",
+                        "name": "cloudId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Cluster ID",
+                        "name": "clusterId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Benchmarks ID",
+                        "name": "benchmarksId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.ReturnData"
+                        }
+                    }
+                }
+            }
+        },
         "/clouds/{cloudId}/clusters/{clusterId}/nodesets": {
             "get": {
                 "description": "클러스터의 NodeSet 리스트 (Openstack)",
@@ -1199,6 +1315,19 @@
         }
     },
     "definitions": {
+        "common.BootstrapProvider": {
+            "type": "integer",
+            "enum": [
+                1,
+                2,
+                3
+            ],
+            "x-enum-varnames": [
+                "Kubeadm",
+                "MicroK8s",
+                "K3s"
+            ]
+        },
         "model.BaremetalHostInfo": {
             "type": "object",
             "properties": {
@@ -1459,7 +1588,11 @@
             "type": "object",
             "properties": {
                 "bootstrap_provider": {
-                    "type": "integer",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/common.BootstrapProvider"
+                        }
+                    ],
                     "example": 1
                 },
                 "cp_kubeadm_extra_config": {
